[package]
name = "solr-subquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "solr_subquery"
crate-type = ["cdylib"]

[dependencies]
url = "2.2"
pyo3 = { version = "0.16", features = ["extension-module"] }

[dev-dependencies]
urlencoding = "2.1.0"